<!--
Mathew Anderson-Saavedra n01436706
Nicole Chlea Manaoat N01565017
Medi Muamba Nzambi N01320883
Section RCA
Safah Virk N01596470
Section RCB
-->
<resources>
    <string name="app_name">SmartLibraryStudyRoomManagementAndComfortSystem</string>
    <string name="dialog_message">Do you want to exit?</string>
    <string name="dialog_title">Smart Libray Study Room App</string>
    <string name="no">no</string>
    <string name="yes">yes</string>
    <string name="test1">test1</string>
    <string name="test2">test2</string>
    <string name="test3">test3</string>
    <string name="test4">test4</string>
    <string name="first_thing">First thing</string>
    <string name="second_thing">Second thing</string>
    <string name="third_thing">Third Thing</string>
    <string name="fourth_thing">Fourth Thing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_access_code">Enter Access Code</string>
    <string name="ok">OK</string>
    <string name="_1234">1234</string>
    <string name="cancel">Cancel</string>
    <string name="room_1d">Room 1</string>
    <string name="room_2d">Room 2</string>
    <string name="room_3d">Room 3</string>
    <string name="room_4d">Room 4</string>
    <string name="building_d">BUILDING D</string>
    <string name="room_1a">Room 1</string>
    <string name="room_2a">Room 2</string>
    <string name="room_3a">Room 3</string>
    <string name="room_4a">Room 4</string>
    <string name="building_a">BUILDING A</string>
    <string name="idk">IDK</string>
    <string name="lighting">LIGHTING</string>
    <string name="room_1b">Room 1</string>
    <string name="room_2b">Room 2</string>
    <string name="room_3b">Room 3</string>
    <string name="room_4b">Room 4</string>
    <string name="building_b">BUILDING B</string>
    <string name="room_1c">Room 1</string>
    <string name="room_2c">Room 2</string>
    <string name="room_3c">Room 3</string>
    <string name="room_4c">Room 4</string>
    <string name="building_c">BUILDING C</string>
    <string name="time">TIME</string>
    <string name="temperature">Temperature:</string>
    <string name="building_a2">Building A</string>
    <string name="building_b2">Building B</string>
    <string name="building_c2">Building C</string>
    <string name="building_d2">Building D</string>
    <string name="temperature2">Temperature</string>
    <string name="lighting2">Lighting</string>
    <string name="time2">Time</string>
    <string name="idk2">idk</string>
    <string name="air_quality">Air Quality:</string>
    <string name="room_101a">Room 101A</string>
    <string name="on_or_off">On or Off</string>
    <string name="timer">Timer:</string>
    <string name="how_many_people_in_the_room">How many people in the room:</string>
    <string name="open_or_close_door">Open or Close Door:</string>
    <string name="exit">exit</string>
    <string name="feedback">feedback</string>
    <string name="about_us">about us</string>
    <string name="settings">settings</string>
    <string name="messages_header">Something</string>
    <string name="userinfo">User Info</string>
    <string name="reply_title">Reply Title</string>
    <string name="sync_header">Sync Header</string>
    <string name="landscape">Landscape</string>
    <string name="attachment_title">attachment_title</string>
    <string name="attachment_summary_off">attachment_title</string>
    <string name="attachment_summary_on">attachment_title</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="options">Options</string>
    <string name="vacant">Vacant</string>
    <string name="occupied">Occupied</string>
    <string name="login_icon_desc">login_icon_desc</string>
    <string-array name="school_options">
        <item>Humber North</item>
        <item>Sheridan</item>
    </string-array>
    <string name="login">Login</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="no_account_sign_up">Dont have an account? Sign Up</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="settings_screen">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="password_cannot_be_empty">password cannot be empty</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="invalid_code">Invalid code</string>
    <string name="you_have_clicked_on_settings">You have clicked on settings</string>
    <string name="you_have_clicked_on_info">You have clicked on info</string>
    <string name="you_have_clicked_on_feedback">You have clicked on feedback</string>
    <string name="you_have_clicked_on_exit">You have clicked on exit</string>
    <string name="users">users</string>
    <string name="you_have_registered_an_account">You have registered an account!</string>
    <string name="tel_1234567789">tel:1234567789</string>
    <string name="email">Email</string>
    <string name="LOGIN">LOGIN</string>
    <string name="OR">OR</string>
    <string name="sign_in_with_google1">Sign in with Google</string>
    <string name="don_t_have_an_account_sign_up1">Don\'t have an account? Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="please_submit_a_review">Please Submit a Review!</string>
    <string name="your_name">Your Name</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="your_email">Your Email</string>
    <string name="your_comments">Your Comments</string>
    <string name="submit_review">Submit Review</string>
    <string name="roomd202">RoomD202</string>
    <string name="roomd203">RoomD203</string>
    <string name="roomd204">RoomD204</string>
    <string name="rooma201">RoomA201</string>
    <string name="rooma202">RoomA202</string>
    <string name="rooma203">RoomA203</string>
    <string name="rooma204">RoomA204</string>
    <string name="roomb201">RoomB201</string>
    <string name="roomb202">RoomB202</string>
    <string name="roomb203">RoomB203</string>
    <string name="roomb204">RoomB204</string>
    <string name="app_setttings">App Setttings</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="landscape1">Landscape</string>
    <string name="font_size">Font Size</string>
    <string name="about_us1">About Us</string>
    <string name="preferences">Preferences</string>
    <string name="feedback1">Feedback</string>
    <string name="roomc201">RoomC201</string>
    <string name="roomc202">RoomC202</string>
    <string name="roomc203">RoomC203</string>
    <string name="roomc204">RoomC204</string>
    <string name="profile_details">profile Details</string>
    <string name="your_name1">Your Name</string>
    <string name="email_address1">Email Address</string>
    <string name="password2">password</string>
    <string name="save">Save</string>
    <string name="nametesting">NameTesting</string>
    <string name="email2">email</string>
    <string name="buildings">Buildings</string>
    <string name="misc">Misc</string>
    <string name="settings1">Settings</string>
    <string name="profile">Profile</string>
    <string name="feedback2">Feedback</string>
    <string name="logout">Logout</string>
    <string name="logout1">Logout</string>
    <string name="location_tracking_disabled">Location tracking disabled</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone_number">Phone Number</string>
    <string name="roomd201">RoomD201</string>
    <string name="app_setttings1">App Setttings</string>
    <string name="night_mode1">Night Mode</string>
    <string name="landscape2">Landscape</string>
    <string name="font_size1">Font Size</string>
    <string name="about_us2">About Us</string>
    <string name="location">Location</string>
    <string name="feedback3">Feedback</string>
    <string name="users1">users</string>
    <string name="user_does_not_exist">User does not exist</string>
    <string name="remember_me2">remember_me</string>
    <string name="username1">username</string>
    <string name="password1">password</string>
    <string name="logged_out_successfully">Logged out successfully</string>
    <string name="userprefs">UserPrefs</string>
    <string name="remember_me3">remember_me</string>
    <string name="location_permission_granted">Location permission granted</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="name">name</string>
    <string name="failed_to_load_user_data">Failed to load user data</string>
    <string name="name1">name</string>
    <string name="email1">email</string>
    <string name="access_code_not_set">Access code not set</string>
    <string name="generate_code">Generate code</string>
    <string name="profile_image">Profile Image</string>
    <string name="aboutUs">We are committed to providing the best services to our users with an innovative and customer-centric approach. Our mission is to enhance your experience and deliver quality.</string>
    <string name="contact_Us">Contact Us</string>
    <string name="aboutUs_image">Profile Image</string>
    <string name="info_aboutUs">About Us</string>
    <string name="client_id">932079205234-31a3dvvotifpdtqp1e55aijuld9hv7sl.apps.googleusercontent.com</string>
    <string name="actualTime">Time:</string>
</resources>