<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        app:showAsAction="ifRoom"
        android:title=""
        android:icon="@drawable/tbd_menu">

        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/settings"
                app:showAsAction="never"
                android:icon="@drawable/tbd_menusettings"/>

            <item
                android:id="@+id/info"
                android:title="@string/about_us"
                app:showAsAction="never"
                android:icon="@drawable/tbd_info"
                />
            <item
                android:id="@+id/feedback"
                android:title="@string/feedback"
                app:showAsAction="never"
                android:icon="@drawable/tbd_feedback"
                />
            <item
                android:id="@+id/exit"
                android:title="@string/exit"
                app:showAsAction="never"
                android:icon="@drawable/tbd_exit"
                />


        </menu>
    </item>

</menu>