<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".FeedbackFragment">

    <RatingBar
        android:id="@+id/rating"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:numStars="5"
        android:stepSize="0.1"
        android:scaleX="2"
        android:scaleY="2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/please_submit_a_review"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/fullNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:hint="@string/your_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/phoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:layout_marginTop="130dp" />

    <EditText
        android:id="@+id/EmailInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="175dp" />

    <EditText
        android:id="@+id/commentBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:hint="@string/your_comments"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:minLines="3" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_review"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="310dp" />

    <TextView
        android:id="@+id/countdownTimerText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:gravity="center"
        android:text=""
        android:textColor="@android:color/holo_red_dark"
        android:visibility="visible" />

</FrameLayout>
