<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp"
        android:gravity="center_horizontal">

        <!-- Profile Image -->
        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/about_us"
            android:contentDescription="@string/aboutUs_image"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"
            android:elevation="8dp"
           />

        <!-- About Us Title -->
        <TextView
            android:id="@+id/about_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_aboutUs"
            android:textSize="28sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            android:fontFamily="sans-serif-medium"/>

        <!-- About Us Description -->
        <TextView
            android:id="@+id/about_us_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/aboutUs"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:lineSpacingExtra="6dp"
            android:gravity="center"
            android:layout_marginBottom="24dp"
            android:fontFamily="sans-serif-light"/>

        <!-- Contact Us Button -->
        <Button
            android:id="@+id/contact_us_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/contact_Us"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/darkGreen"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:layout_marginTop="16dp"
            android:elevation="4dp"
            android:fontFamily="sans-serif-medium"/>

    </LinearLayout>
</ScrollView>
