<?xml version="1.0" encoding="utf-8"?>
<!--
Mathew Anderson-Saavedra n01436706
Nicole Chlea Manaoat N01565017
Medi Muamba Nzambi N01320883
Section RCA
Safah Virk N01596470
Section RCB
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/baige"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/room2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="98dp"
        android:layout_marginBottom="507dp"
        android:clickable="false"
        android:contentDescription="@string/room_1c"
        android:src="@drawable/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/room2"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/room2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="507dp"
        android:contentDescription="@string/room_2c"
        android:src="@drawable/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/room2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/room3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="331dp"
        android:clickable="false"
        android:contentDescription="@string/room_3c"
        android:src="@drawable/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/room4"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="107dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="331dp"
        android:contentDescription="@string/room_4c"
        android:src="@drawable/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textBuildingC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="157dp"
        android:layout_marginBottom="668dp"
        android:text="@string/building_c"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>